Bug 325644 - window.blur() throws exception in embedded scenarios where nsIEmbeddingSiteWindow2 isn't implemented, r=jst